// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header tests expect to logout and go to login  not exists button 1`] = `
<div
  className="header"
  style={
    Object {
      "background": "#0E4749",
      "paddingBottom": "10px",
      "paddingTop": "10px",
      "top": 0,
    }
  }
>
  <nav
    className="navbar sticky-top navbar-expand-lg navbar-dark p-3"
  >
    <div
      className="container"
    >
      <img
        alt="imagen tracking"
        src="logo_small.png"
        style={
          Object {
            "width": 200,
          }
        }
      />
    </div>
  </nav>
</div>
`;

exports[`Header tests expect to render Header component to render with signing in 1`] = `
<div
  className="header"
  style={
    Object {
      "background": "#0E4749",
      "paddingBottom": "10px",
      "paddingTop": "10px",
      "top": 0,
    }
  }
>
  <nav
    className="navbar sticky-top navbar-expand-lg navbar-dark p-3"
  >
    <div
      className="container"
    >
      <img
        alt="imagen tracking"
        src="logo_small.png"
        style={
          Object {
            "width": 200,
          }
        }
      />
      <div
        className="collapse navbar-collapse"
        id="navbarNav"
        style={
          Object {
            "height": "23px",
          }
        }
      >
        <ul
          className="navbar-nav ms-auto"
        >
          <li>
            <Link
              name="link"
              onClick={[Function]}
              style={
                Object {
                  "color": "white",
                  "textDecoration": "none",
                }
              }
              to="/"
            >
              Cerrar Sesión
            </Link>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Header tests expect to render Header component to user not defined 1`] = `
<div
  className="header"
  style={
    Object {
      "background": "#0E4749",
      "paddingBottom": "10px",
      "paddingTop": "10px",
      "top": 0,
    }
  }
>
  <nav
    className="navbar sticky-top navbar-expand-lg navbar-dark p-3"
  >
    <div
      className="container"
    >
      <img
        alt="imagen tracking"
        src="logo_small.png"
        style={
          Object {
            "width": 200,
          }
        }
      />
    </div>
  </nav>
</div>
`;
